--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,44 +1,75 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.8-sapmachine-21'
-            args '-v $HOME/.m2:/root/.m2'
-        }
-    }
+    agent none
     stages {
-        stage('Build') {
+        stage("build") {
+            when {
+                changeset "**/worker/**"
+            }
+            agent {
+                docker {
+                    image 'maven:3.9.8-sapmachine-21'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
+            }
             steps {
-                echo 'Building worker app'
+                echo 'Compiling worker app..'
                 dir('worker') {
                     sh 'mvn compile'
                 }
             }
         }
-        stage('Test') {
+
+        stage("test") {
+            when {
+                changeset "**/worker/**"
+            }
+            agent {
+                docker {
+                    image 'maven:3.9.8-sapmachine-21'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
+            }
             steps {
-                echo 'Running unit tests on worker app'
+                echo 'Running Unit Tests on worker app..'
                 dir('worker') {
                     sh 'mvn clean test'
                 }
             }
         }
-        stage('Package') {
+
+        stage("package") {
+            when {
+                branch 'master'
+                changeset "**/worker/**"
+            }
+            agent {
+                docker {
+                    image 'maven:3.9.8-sapmachine-21'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
+            }
             steps {
-                echo 'Packaging worker app into a JAR file'
+                echo 'Packaging worker app'
                 dir('worker') {
                     sh 'mvn package -DskipTests'
                     archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
                 }
             }
         }
-        stage('Docker Package') {
+
+        stage('docker-package') {
+            when {
+                changeset "**/worker/**"
+                branch 'master'
+            }
             agent any
             steps {
                 echo 'Packaging worker app with Docker'
                 script {
                     docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                        def workerImage = docker.build("pabloflores2615/worker:v${env.BUILD_ID}", "./worker")
+                        def workerImage = docker.build("xxxxx/worker:v${env.BUILD_ID}", "./worker")
                         workerImage.push()
+                        workerImage.push("${env.BRANCH_NAME}")
                         workerImage.push("latest")
                     }
                 }
@@ -47,7 +78,7 @@ pipeline {
     }
     post {
         always {
-            echo 'The job is complete'
+            echo 'Building multibranch pipeline for worker is completed..'
         }
     }
 }
