--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -1,67 +1,67 @@
-pipeline { 
+pipeline {
     agent none
-    stages{ 
-        stage('build'){ 
-            agent{
-                docker{
-                    image 'python:3.11-slim'
-                    args '--user root'
-                    }
-                    }
 
-            steps{ 
-                echo 'Compiling vote app.' 
-                dir('vote'){
-            
-                        sh "pip install -r requirements.txt"
-
-                } 
-            } 
-        } 
-        stage('test'){ 
-           
-            agent {
-                docker{
-                    image 'python:3.11-slim'
-                    args '--user root'
-                    }
-                    }
-            steps{ 
-                echo 'Running Unit Tests on vote app.' 
-                dir('vote'){ 
-                   
-                        sh "pip install -r requirements.txt"
-                        sh 'nosetests -v'
-                        
-                        
-                } 
-            } 
-        } 
-
-      stage('docker-package'){
-          agent any
-         
-          steps{
-            echo 'Packaging wvoteorker app with docker'
-            script{
-              docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                  // ./vote is the path to the Dockerfile that Jenkins will find from the Github repo
-                  def voteImage = docker.build("okapetanios/vote:v${env.BUILD_ID}", "./vote")
-                  voteImage.push()
-                  voteImage.push("${env.BRANCH_NAME}")
-                  voteImage.push("latest")
-              }
+    stages {
+        stage('Install Dependencies') {
+            when {
+                changeset "**/vote/**"
             }
-          }
-      }
+            agent {
+                docker {
+                    image 'python:3.11-slim'
+                    args '--user root'
+                }
+            }
+            steps {
+                echo 'Installing dependencies for vote app...'
+                dir('vote') {
+                    sh "pip install -r requirements.txt"
+                    sh "pip list" // Verificar que las dependencias estén instaladas
+                }
+            }
+        }
 
-    } 
-    post {
-        always{
-            echo 'Pipeline for vote is complete'
+        stage('Run Tests') {
+            when {
+                changeset "**/vote/**"
+            }
+            agent {
+                docker {
+                    image 'python:3.11-slim'
+                    args '--user root'
+                }
+            }
+            steps {
+                echo 'Running unit tests on vote app...'
+                dir('vote') {
+                    sh 'python -m nose -v'
+                }
+            }
+        }
+
+        stage('Package with Docker') {
+            agent any
+            when {
+                changeset "**/vote/**"
+                branch 'master'
+            }
+            steps {
+                echo 'Packaging vote app with Docker...'
+                script {
+                    docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+                        def voteImage = docker.build("okapetanios/vote:v${env.BUILD_ID}", "./vote")
+                        voteImage.push()
+                        voteImage.push("${env.BRANCH_NAME}")
+                        voteImage.push("latest")
+                    }
+                }
+            }
         }
     }
 
-} 
-
-
+    post {
+        always {
+            echo 'Pipeline for vote is complete'
+        }
+    }
+}
