--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
                 echo 'Packaging vote app with Docker...'
                 script {
                     docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                        def voteImage = docker.build("okapetanios/vote:v${env.BUILD_ID}", "./vote")
+                        def voteImage = docker.build("pabloflores2615/vote:v${env.BUILD_ID}", "./vote")
                         voteImage.push()
                         voteImage.push("${env.BRANCH_NAME}")
                         voteImage.push("latest")
