--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -16,7 +16,8 @@ pipeline {
                 echo 'Installing dependencies for vote app...'
                 dir('vote') {
                     sh "pip install -r requirements.txt"
-                    sh "pip list" // Verificar que las dependencias estén instaladas
+                    sh "pip install nose" // Asegurar que nose se instale
+                    sh "pip list | grep nose" // Verificar que nose está instalado
                 }
             }
         }
@@ -34,7 +35,7 @@ pipeline {
             steps {
                 echo 'Running unit tests on vote app...'
                 dir('vote') {
-                    sh 'python -m nose -v'
+                    sh 'nosetests -v'
                 }
             }
         }
@@ -49,7 +50,7 @@ pipeline {
                 echo 'Packaging vote app with Docker...'
                 script {
                     docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                        def voteImage = docker.build("pabloflores2615/vote:v${env.BUILD_ID}", "./vote")
+                        def voteImage = docker.build("okapetanios/vote:v${env.BUILD_ID}", "./vote")
                         voteImage.push()
                         voteImage.push("${env.BRANCH_NAME}")
                         voteImage.push("latest")
