--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
             }
             agent {
                 docker {
-                    image 'python:3.11-slim'
+                    image 'python:3.11'
                     args '--user root'
                 }
             }
@@ -16,7 +16,6 @@ pipeline {
                 echo 'Installing dependencies for vote app...'
                 dir('vote') {
                     sh "pip install -r requirements.txt"
-                    sh "pip install nose" // Asegurar que nose se instale
                     sh "pip list | grep nose" // Verificar que nose está instalado
                 }
             }
@@ -28,14 +27,17 @@ pipeline {
             }
             agent {
                 docker {
-                    image 'python:3.11-slim'
+                    image 'python:3.11'
                     args '--user root'
                 }
             }
             steps {
                 echo 'Running unit tests on vote app...'
                 dir('vote') {
-                    sh 'nosetests -v'
+                    // Puedes usar cualquiera de las dos opciones:
+                    sh "python -m nose -v"
+                    // O si sigue sin funcionar:
+                    // sh "pytest -v" // Cambia a pytest si nose sigue sin funcionar
                 }
             }
         }
