added pip install nose

--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -34,6 +34,7 @@ pipeline {
             steps {
                 echo 'Running unit tests on vote app...'
                 dir('vote') {
+		    sh 'pip install nose'
                     sh 'python -m nose -v'
                 }
             }
