--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -34,8 +34,8 @@ pipeline {
             steps {
                 echo 'Running unit tests on vote app...'
                 dir('vote') {
-		    sh 'pip install nose'
-                    sh 'python -m nose -v'
+		    sh 'pip install nose2'
+                    sh 'python -m nose2 -v'
                 }
             }
         }
